# tce-lib

./: README.md  pyproject.toml  test_lib.py
.github/workflows/: pull-requests.yml  workflow.yml
assets/: unit-cell-vis.py
examples/: 4-tensorial-property.py  exotic-lattice.py  exotic-lattice2.py  load-dataset-and-visualize.py  size-dependence.py
tce/: __init__.py  constants.py  datasets.py  monte_carlo.py  structures.py  topology.py  training.py
