[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tce-lib"
dynamic = ["version"]
description = "tensor cluster expansion library for solid solution modeling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
author = { name = "Jacob Jeffries", email = "jwjeffr@clemson.edu" }
keywords = [
    "alloys",
    "cluster expansion",
    "materials science",
    "density functional theory",
    "ase",
    "monte carlo",
    "scientific computing",
    "machine learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.0.0, <3.0",
    "sparse>=0.14.0, <0.17.0",
    "scipy>=1.6.0, <1.16.0",
    "opt-einsum>=3.0.1, <4.0",
    "ase>=3.10.0, <3.26.0",
    "aenum>=3.0.0, <3.1.17"
]

[project.urls]
Homepage = "https://github.com/MUEXLY/tce-lib"

[project.optional-dependencies]
dev = [
    "hatchling~=1.27.0",
    "pytest~=8.0.2",
    "pytest-cov~=7.0.0",
    "ruff~=0.9.4",
    "mypy~=1.13.0",
    "pdoc~=15.0.1",
    "scipy-stubs~=1.15.3.0"
]
examples = [
    "scikit-learn~=1.7.1",
    "requests~=2.32.5",
    "ovito~=3.13.1",
    "cowley-sro-parameters~=1.1.1"
]

[tool.hatch.version]
path = "tce/__init__.py"

[tool.hatch.build]
include = [
    "tce",
    "tce/datasets/**/*",
]

[[tool.mypy.overrides]]
module = ["sparse", "opt_einsum", "aenum"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["tce"]

[tool.coverage.report]
omit = ["tce/monte_carlo.py"]